--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+      <meta property="og:title" content="[Profile] 안녕하세요! 김태훈입니다." />
+      <meta property="og:description" content="이력서 및 경력기술서" />
+      <meta property="og:url" content="https://tae-h.github.io/profile/" />
+      <meta property="og:image" content="%PUBLIC_URL%/favicon.ico" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
